Remove the requirement to get '- -' out of the CSV

--- a/process-scale-data.ipynb
+++ b/process-scale-data.ipynb
@@ -28,10 +28,7 @@
     "\n",
     "Put the CSV in the same directory as this notebook and run the following cells.\n",
     "\n",
-    "NOTE: If you encounter errors, there may be unexpected data in th CSV. Make sure that:\n",
-    "\n",
-    "* There are no rows that have non-data entries like `- -`\n",
-    "* Make sure that the CSV file has the column names as the first row, then the data. And nothing else. No “sheet headers” or other kinds of Wyze data at the end."
+    "NOTE: If you encounter errors, there may be unexpected data in th CSV. Make sure that the CSV file has the column names as the first row, then the data. And nothing else. No “sheet headers” or other kinds of Wyze data at the end."
    ]
   },
   {
@@ -41,13 +38,31 @@
    "outputs": [],
    "source": [
     "# load weight data\n",
-    "rm_lb = lambda x: (float(x.replace('lb','')))\n",
-    "rm_pct = lambda x: (float(x.replace('%','')))\n",
+    "\n",
+    "def rm_lb(x):\n",
+    "    if x != '- -':\n",
+    "        return float(x.replace('lb',''))\n",
+    "    else:\n",
+    "        return np.nan\n",
+    "\n",
+    "def rm_pct(x):\n",
+    "    if x != '- -':\n",
+    "        return float(x.replace('%',''))\n",
+    "    else:\n",
+    "        return np.nan\n",
+    "\n",
+    "def safe_float(x):\n",
+    "    if x != '- -':\n",
+    "        return float(x)\n",
+    "    else:\n",
+    "        return np.nan\n",
+    "\n",
     "weight_data = pd.read_csv(\n",
     "    \"scale-data.csv\",\n",
     "    parse_dates=['Date and Time'],\n",
     "    converters={\n",
     "        \"Weight\": rm_lb,\n",
+    "        \"BMI\": safe_float,\n",
     "        \"Body Fat\": rm_pct,\n",
     "        \"Muscle Mass\": rm_lb,\n",
     "        \"Body Water\": rm_pct,\n",
@@ -55,11 +70,9 @@
     "        \"Bone Mass\": rm_lb,\n",
     "        \"Muscle Mass\": rm_lb,\n",
     "        \"Protein\": rm_pct,\n",
-    "    },\n",
-    "    dtype={\n",
-    "        \"BMI\": np.float64,\n",
-    "        \"Visceral Fat\": np.float64,\n",
-    "        \"BMR\": np.float64,\n",
+    "        \"Visceral Fat\": safe_float,\n",
+    "        \"BMR\": safe_float,\n",
+    "        \"Metabolic age\": safe_float,\n",
     "    }\n",
     ")\n",
     "weight_data.rename(\n",
@@ -67,7 +80,9 @@
     "\tcolumns = { 'Date and Time': 'time' }\n",
     ")\n",
     "\n",
-    "# weight_data\n"
+    "weight_data = weight_data[weight_data.Protein.notna()]\n",
+    "# pd.set_option(\"display.max_rows\", None)\n",
+    "# weight_data.tail()\n"
    ]
   },
   {
@@ -90,7 +105,7 @@
     "\t\t\t\t\t& \n",
     "\t\t\t\t\t(weight_data.time < datetime(2023, 9, 13))\n",
     "\t\t\t\t]\n",
-    "# weight_data"
+    "weight_data"
    ]
   },
   {
