Adapting to slightly different Wyze output

--- a/process-scale-data.ipynb
+++ b/process-scale-data.ipynb
@@ -45,6 +45,12 @@
     "    else:\n",
     "        return np.nan\n",
     "\n",
+    "def rm_kg(x):\n",
+    "    if x != '- -':\n",
+    "        return float(x.replace('kg',''))\n",
+    "    else:\n",
+    "        return np.nan\n",
+    "\n",
     "def rm_pct(x):\n",
     "    if x != '- -':\n",
     "        return float(x.replace('%',''))\n",
@@ -61,6 +67,8 @@
     "    \"scale-data.csv\",\n",
     "    parse_dates=['Date and Time'],\n",
     "    converters={\n",
+    "        \"Weight(lb)\": rm_lb,\n",
+    "        \"Weight(kg)\": rm_kg,\n",
     "        \"Weight\": rm_lb,\n",
     "        \"BMI\": safe_float,\n",
     "        \"Body Fat\": rm_pct,\n",
@@ -91,7 +99,9 @@
    "source": [
     "### Select the data you want (optional)\n",
     "\n",
-    "Set the start and end dates for the data you want."
+    "Set the start and end dates for the data you want.\n",
+    "\n",
+    "NOTE: `datetime(2025, 6, 20)` will create a date at midnight (i.e. `2025-06-20T00:00:00`) so for the second date below (the \"end\") you need to choose the date after the target date. So effectively, that gets me everything on the 19th and nothing on the 20th."
    ]
   },
   {
@@ -101,9 +111,9 @@
    "outputs": [],
    "source": [
     "weight_data =\tweight_data[\n",
-    "\t\t\t\t\t(weight_data.time > datetime(2023, 7, 21))\n",
+    "\t\t\t\t\t(weight_data.time >= datetime(2025, 6, 18))\n",
     "\t\t\t\t\t& \n",
-    "\t\t\t\t\t(weight_data.time < datetime(2023, 9, 13))\n",
+    "\t\t\t\t\t(weight_data.time <= datetime(2025, 6, 20))\n",
     "\t\t\t\t]\n",
     "weight_data"
    ]
@@ -134,7 +144,7 @@
     "    # )\n",
     "    fit.write_weight_scale(\n",
     "        timestamp = math.trunc(d[\"time\"].timestamp()),\n",
-    "        weight = float(d[\"Weight\"] * 0.45359237), # convert to kilograms\n",
+    "        weight = d[\"Weight(kg)\"], # garmin wants kilograms\n",
     "        percent_fat = d[\"Body Fat\"],\n",
     "        percent_hydration = d[\"Body Water\"],\n",
     "        visceral_fat_mass = d[\"Visceral Fat\"],\n",
@@ -191,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
