Added a couple of addl views (body fat, muscle mass)

--- a/visualize-scale-data.ipynb
+++ b/visualize-scale-data.ipynb
@@ -47,7 +47,7 @@
     "    \"scale-data.csv\",\n",
     "    parse_dates=['Date and Time'],\n",
     "    converters={\n",
-    "        \"Weight\": rm_lb,\n",
+    "        \"Weight(lb)\": rm_lb,\n",
     "        \"Body Fat\": rm_pct,\n",
     "        \"Muscle Mass\": rm_lb,\n",
     "        \"Body Water\": rm_pct,\n",
@@ -111,7 +111,7 @@
     "weight_data['Week'] = weight_data['time'].dt.strftime('%Y-%U')\n",
     "\n",
     "# Calculate weekly average, min, and max weight\n",
-    "weekly_stats = weight_data.groupby('Week')['Weight'].agg(['mean', 'min', 'max']).reset_index()\n",
+    "weekly_stats = weight_data.groupby('Week')['Weight(lb)'].agg(['mean', 'min', 'max']).reset_index()\n",
     "\n",
     "# Modify x-axis labels to display monthly\n",
     "weekly_stats['Month'] = weekly_stats['Week'].str[:7]  # Extract the year-month part\n",
@@ -148,6 +148,96 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "weight_data['Week'] = weight_data['time'].dt.strftime('%Y-%U')\n",
+    "\n",
+    "# Calculate weekly average, min, and max weight\n",
+    "weekly_stats = weight_data.groupby('Week')['Body Fat'].agg(['mean', 'min', 'max']).reset_index()\n",
+    "\n",
+    "# Modify x-axis labels to display monthly\n",
+    "weekly_stats['Month'] = weekly_stats['Week'].str[:7]  # Extract the year-month part\n",
+    "unique_months = weekly_stats['Month'].unique()\n",
+    "\n",
+    "\n",
+    "# Plotting with Seaborn\n",
+    "sns.set(style=\"whitegrid\")\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "\n",
+    "\n",
+    "# Plot the average weight as a line\n",
+    "sns.lineplot(x='Week', y='mean', data=weekly_stats, color='skyblue', label='Average Weight')\n",
+    "\n",
+    "# Fill the area between min and max as a shaded region\n",
+    "plt.fill_between(weekly_stats['Week'], weekly_stats['min'], weekly_stats['max'], color='lightgray', label='Min-Max Range')\n",
+    "\n",
+    "# Adding labels and legend\n",
+    "plt.xlabel('Week')\n",
+    "plt.ylabel('Weight')\n",
+    "plt.title('Weekly Body Fat Statistics')\n",
+    "plt.legend()\n",
+    "\n",
+    "# Modify x-axis labels to display monthly\n",
+    "plt.xticks(rotation=45)\n",
+    "# plt.xticks(ticks=range(len(unique_months)), labels=unique_months, rotation=45)\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "weight_data['Week'] = weight_data['time'].dt.strftime('%Y-%U')\n",
+    "\n",
+    "# Calculate weekly average, min, and max weight\n",
+    "weekly_stats = weight_data.groupby('Week')['Muscle Mass'].agg(['mean', 'min', 'max']).reset_index()\n",
+    "\n",
+    "# Modify x-axis labels to display monthly\n",
+    "weekly_stats['Month'] = weekly_stats['Week'].str[:7]  # Extract the year-month part\n",
+    "unique_months = weekly_stats['Month'].unique()\n",
+    "\n",
+    "\n",
+    "# Plotting with Seaborn\n",
+    "sns.set(style=\"whitegrid\")\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "\n",
+    "\n",
+    "# Plot the average weight as a line\n",
+    "sns.lineplot(x='Week', y='mean', data=weekly_stats, color='skyblue', label='Average Weight')\n",
+    "\n",
+    "# Fill the area between min and max as a shaded region\n",
+    "plt.fill_between(weekly_stats['Week'], weekly_stats['min'], weekly_stats['max'], color='lightgray', label='Min-Max Range')\n",
+    "\n",
+    "# Adding labels and legend\n",
+    "plt.xlabel('Week')\n",
+    "plt.ylabel('Weight')\n",
+    "plt.title('Weekly Muscle Mass Statistics')\n",
+    "plt.legend()\n",
+    "\n",
+    "# Modify x-axis labels to display monthly\n",
+    "plt.xticks(rotation=45)\n",
+    "# plt.xticks(ticks=range(len(unique_months)), labels=unique_months, rotation=45)\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -167,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
